k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-board
  namespace: postapp
spec:
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: react-board-pod
  template:
    metadata:
      labels:
        app: react-board-pod
    spec:
      containers:
      - name: react-board-container
        image: dianaseong/react-board:v1
        ports:
        - containerPort: 80
