k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-board-service
  namespace: postapp
spec:
spec:
  selector:
    app: react-board-pod
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
